# simple-budget-rust

./: Cargo.toml
src/authenticated/accounts/: index.rs
src/authenticated/goals/: index.rs
src/templates/accounts/: edit.html  new.html
