[package]
name = "simple-budget"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie-signed", "query"] }
bson = { version = "2.11.0", features = ["serde_with-3"] }
chrono = "0.4.38"
log = "0.4.22"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
openidconnect = { version = "3.5.0", features = ["reqwest"] }
serde = "1.0.203"
tera = { version = "1.20.0" }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
