[package]
name = "simple-budget"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = "^0.7"
axum-extra = { version = "^0.9", features = ["cookie-signed", "query"] }
bson = { version = "^2.11", features = ["serde_with-3"] }
chrono = "^0.4"
log = "^0.4"
mongodb = { version = "^3.0", features = ["bson-chrono-0_4"] }
openidconnect = { version = "^3.5", features = ["reqwest"] }
serde = "^1.0"
tera = { version = "^1.19" }
tokio = { version = "^1.37", features = ["full"] }
tower-http = { version = "^0.5", features = ["fs", "trace"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
validator = { version = "^0.18", features = ["derive"] }
